# WAVIER

./: README.md  experiments.py  pyproject.toml  utils.py
ablations/: architecture_ablation_training.py  resampling_abalation_training.py  signal_ablation_training.py  wavelet_ablation_training.py
datasets/: __init__.py  core.py  factory.py  task.py  tlx.py
datasets/colet/: README.md  convert_mat_to_csvs.m  gaze_baseline.py  h5py_load_data.ipynb  load_data.ipynb  load_data_v2.ipynb  pupil_baseline.py  pupil_tests.ipynb  rename_annotations.ipynb  visualise_data.ipynb
datasets/eseed/: load_data.ipynb
features/: __init__.py  core.py  hybrid.py  stats.py  summary.py  temporal.py
inputs/: eseed_task.py  gaze.py  pupil.py  task.py
inputs/nslr/: __init__.py  nslr_hmm.py  slow_nslr.py
labels/: __init__.py  core.py  task.py  tlx.py
models/: dwt_avae.py  dwt_avaer.py  dwt_vae.py  dwt_vaer.py
